--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
     "test": "jest"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.30",
+    "@fortawesome/free-solid-svg-icons": "^5.14.0",
+    "@fortawesome/vue-fontawesome": "^2.0.0",
     "@nuxtjs/axios": "^5.12.2",
     "@nuxtjs/bulma": "^1.3.0",
     "@nuxtjs/pwa": "^3.0.2",
@@ -25,6 +28,7 @@
     "jest": "^26.4.2",
     "node-sass": "^4.14.1",
     "sass-loader": "^9.0.3",
-    "vue-jest": "^3.0.4"
+    "vue-jest": "^3.0.4",
+    "vuex": "^3.5.1"
   }
 }
