--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@nuxtjs/axios": "^5.12.0",
     "@nuxtjs/bulma": "^1.3.0",
     "@nuxtjs/pwa": "^3.0.0-beta.20",
+    "animated-number-vue": "^1.0.0",
     "axios": "^0.20.0",
     "nuxt": "^2.13.0",
     "vue-animejs": "^2.1.1"
